--- a/style.css
+++ b/style.css
@@ -28,21 +28,53 @@ body { margin:0; padding:0; }
   text-shadow: 0px 2px 1px rgba(255,255,255,0.85);
 }
 
-#data {
+#ui {
   position: absolute;
   bottom: 12px;
   left: 12px;
-  width: 264px;
-  height: 600px;
+  z-index: 10000;
+
+  display: flex;
+  /* right: 12px; */
+  /* left: 12px; */
+  /* margin: 12px; */
+  /* width: 264px; */
+  /* width: 100%; */
+  /* height: 260px; */
   background: rgba(255,255,255,0.9);
   box-shadow: 0 0 15px rgb(0 0 0 / 20%);
   border-radius: 5px;
-  z-index: 10000;
+}
+
+#filters {
+  display: block;
+}
+
+#dataview {
+  display: none;
+  width: 300px;
+  height: 100px;
+  background-color: aquamarine;
+}
+
+#legendviz {
+  margin-top: 32px;
+  margin-bottom: 8px;
 }
 
 h3 {
+  margin-bottom: 16px;
   text-align: center;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+h3.legend {
+  margin: 36px 0 px 0;
+}
+
+.legend text.title {
+  font-size: 16px;
+  margin-bottom: 10px;
 }
 
 .flex-center {
