--- a/www/app/main.scss
+++ b/www/app/main.scss
@@ -32,8 +32,7 @@ body { margin:0; padding:0; }
 }
 
 .btn.active {
-  /* background-color: #6a1b9a; */
-  background-color: red;
+  @extend .purple, .darken-1;
 }
 
 #ui {
