--- a/www/style/main.scss
+++ b/www/style/main.scss
@@ -35,23 +35,25 @@ body { margin:0; padding:0; }
   @extend .purple, .darken-1;
 }
 
-#ui {
+.card.data-select {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
 
   position: absolute;
+  box-sizing: content-box;
   bottom: 12px;
   left: 12px;
   z-index: 10000;
   padding: 1.5rem;
 
   background: rgba(255,255,255,0.9);
+  
+  h5 {
+    text-align: center;
+  }
 }
 
-#ui h5 {
-  text-align: center;
-}
 
 #filters {
   display: block;
