data source select with events, the right way

--- a/www/style/main.scss
+++ b/www/style/main.scss
@@ -53,15 +53,10 @@ body { margin:0; padding:0; }
   h5 {
     text-align: center;
   }
-}
-
-
-#filters {
-  display: block;
-}
-
-#filters .btn {
-  margin: 0 2px;
+  
+  .btn {
+    margin: 0 2px;
+  }
 }
 
 #dataview {
