--- a/www/style/main.scss
+++ b/www/style/main.scss
@@ -15,7 +15,7 @@ input, text, .numeric {
   bottom:0;
   right:0;
   left:0;
-  font-family: Arial, Helvetica, sans-serif;
+  // font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
   color: #323232;
 }
