remove temporal range selector for now

--- a/www/style/main.scss
+++ b/www/style/main.scss
@@ -68,6 +68,10 @@ input, text, .numeric {
     // margin-top: 6px;
     margin-bottom: 6px;
   }
+
+  river-data-select-source {
+    margin-bottom: 1.5rem;
+  }
 }
 
 #dataview {
