--- a/www/style/main.scss
+++ b/www/style/main.scss
@@ -59,6 +59,7 @@ input, text, .numeric {
   background: rgba(255, 255, 255, 1);
 
   padding: 0.5rem;
+  padding-top: 7px;
   margin-top: 10px;
 
   user-select: none;
@@ -168,8 +169,8 @@ input, text, .numeric {
 }
 
 #data-select {
-  width: 464px;
-  height: 292px;
+  // width: 464px;
+  // height: 292px;
 
   display: flex;
   flex-flow: column nowrap;
@@ -200,9 +201,9 @@ input, text, .numeric {
 
 
 #table {
-  width: 464px;
-  height: 100%;
   margin: 0;
+  overflow-x: auto;
+  overflow-y: auto;
 
   background: rgba(255,255,255,0.9);
 
@@ -213,8 +214,6 @@ input, text, .numeric {
 }
 
 #timeseries {
-  width: 100%;
-  height: 292px;
   margin: 0;
 
   background: rgba(255,255,255,0.9);
