--- a/www/style/main.scss
+++ b/www/style/main.scss
@@ -211,6 +211,31 @@ input, text, .numeric {
   z-index: 10000;
 
   padding: 1.5rem;
+
+  #site-summary {
+    font-size: 0.8rem;
+
+    td:first-child {
+      width: 140px;
+      font-weight: 400;
+    }
+
+    td.count {
+      width: 5rem;
+    }
+  }
+
+  th {
+    padding-bottom: 5px;
+  }
+  td {
+    padding: 5px;
+  }
+
+  td:first-child {
+    width: 160px;
+    font-weight: 400;
+  }
 }
 
 #timeseries {
