--- a/www/style/main.scss
+++ b/www/style/main.scss
@@ -243,7 +243,14 @@ input, text, .numeric {
 
   background: rgba(255,255,255,0.9);
   z-index: 10000;
-  padding: 1rem;
+  // padding: 1rem;
+
+  overflow: hidden;
+
+  // sorry plotly.js
+  .plotlyjsicon {
+    display: none;
+  }
 }
 
 #legend {
